--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">PabellonLH</string>
+    <string name="titlulo_pickers" />
+    <string name="formato_fecha" />
+    <string name="formato_hora" />
 </resources>
